fix button spacing

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -49,8 +49,8 @@ body {
   border: 1px solid #4D4D94;
   padding:7px;
   margin-top: 0px;
-  margin-right:auto;
-  margin-left:auto;
+  margin-right:55px;
+  margin-left:55px;
   background-color: #4D4D94;
   color: #ffffff;
   text-align:center;
@@ -63,8 +63,8 @@ body {
   border: 2px solid #4D4D94;
   padding:7px;
   margin-top: 0px;
-  margin-right:auto;
-  margin-left:auto;
+  margin-right:55px;
+  margin-left:55px;
   background-color: #ffffff;
   color: #000000;
   text-align:center;
